cv-front | Fixed edit button not visible
UpdateLink style seemed to be overriding the correct style.

TODO 1: Make Colles page look properly.
TODO 2: Switch Update page routing to work with app directory.

--- a/cv-front/src/app/sections/colles/card/CollaCard.module.scss
+++ b/cv-front/src/app/sections/colles/card/CollaCard.module.scss
@@ -1,13 +1,6 @@
 .collaCard {
   position: relative;
 
-  .updateLink {
-    position: absolute;
-    top: 0.5rem;
-    right: 0.5rem;
-    z-index: 10;
-  }
-
   .updateButton {
     position: absolute;
     top: 0.5rem;
